--- a/DungeonExplorer.csproj
+++ b/DungeonExplorer.csproj
@@ -46,8 +46,11 @@
     <Compile Include="Game.cs" />
     <Compile Include="Player.cs" />
     <Compile Include="Program.cs" />
+	<Compile Include="Room.cs" />
+	<Compile Include="Testing.cs" />
+	<Compile Include="Monster.cs" />
+	<Compile Include="Creature.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Room.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
